force-app/main/default/objects/Apttus_Base2__UIComponentConfigActionProviderMeta__mdt/Apttus_Base2__UIComponentConfigActionProviderMeta__mdt.object-meta.xml
<CustomObject>
    <label>Apttus UI Config Action Provider Meta</label>
    <pluralLabel>Apttus UI Config Action Providers Meta</pluralLabel>
</CustomObject>