force-app/main/default/objects/Apttus_Base2__UIComponentConfigActionProviderMeta__mdt/fields/Apttus_Base2__Configuration__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__Configuration__c</fullName>
    <label>Configuration</label>
    <referenceTo>Apttus_Base2__UIComponentConfigurationMeta__mdt</referenceTo>
    <relationshipLabel>Configuration</relationshipLabel>
    <relationshipName>Configuration</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>