force-app/main/default/objects/Apttus_Base2__UIComponentConfigActionProviderMeta__mdt/fields/Apttus_Base2__PackageName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__PackageName__c</fullName>
    <label>Package name for data provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>