force-app/main/default/objects/Apttus_Base2__UIComponentConfigActionProviderMeta__mdt/fields/Apttus_Base2__ProviderId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__ProviderId__c</fullName>
    <label>Action Provider</label>
    <referenceTo>Apttus_Base2__UIComponentProviderMeta__mdt</referenceTo>
    <relationshipLabel>Action Provider</relationshipLabel>
    <relationshipName>ActionProvider</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>